[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.23", features = ["serde-with-float"] }
# rust_decimal = "1.23"
rust_decimal_macros = "1.23"
serde = { version = "1.0.137", features = ["derive"] }
csv = "1.1.6"
clap = "3.1.18"
anyhow = "1.0.57"
thiserror = "1.0.31"
log = "0.4.17"
env_logger = "0.9.0"
# serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = "1.0"


[dev-dependencies]
test-case = "2.1.0"
